--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@notionhq/client": "^0.4.11",
     "@stitches/react": "^1.2.6",
+    "myply-common": "https://github.com/rycont/myply-common/",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2"
