--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   "dependencies": {
     "@notionhq/client": "^0.4.11",
     "@stitches/react": "^1.2.6",
-    "myply-common": "https://github.com/rycont/myply-common/",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2"
@@ -19,6 +18,8 @@
     "@types/react": "^17.0.38",
     "eslint": "8.5.0",
     "eslint-config-next": "12.0.7",
+    "lerna": "^4.0.0",
+    "ts-loader": "^9.2.6",
     "typescript": "^4.5.4"
   }
 }
