--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@stitches/react": "^1.2.6",
     "axios": "^0.24.0",
     "dotenv": "^10.0.0",
-    "myply-common": "https://github.com/rycont/myply-common/",
+    "myply-common": "https://github.com/rycont/myply-common",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2"
