--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "myply-common": "https://github.com/rycont/myply-common",
     "next": "12.0.7",
     "react": "17.0.2",
+    "react-content-loader": "^6.1.0",
     "react-dom": "17.0.2",
     "recoil": "^0.5.2"
   },
