--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 [submodule "myply-spotify-adapter"]
     path = packages/myply-spotify-adapter
     url = https://github.com/rycont/myply-spotify-adapter
+[submodule "packages/myply-genie-adapter"]
+	path = packages/myply-genie-adapter
+	url = https://github.com/rycont/myply-genie-adapter/
