--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "@stitches/react": "^1.2.6",
         "axios": "^0.24.0",
         "dotenv": "^10.0.0",
+        "firebase": "^9.6.3",
         "josa-complete": "^1.4.1",
         "myply-common": "https://github.com/rycont/myply-common",
         "next": "12.0.7",
