--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
         "dotenv": "^10.0.0",
         "firebase": "^9.6.3",
         "josa-complete": "^1.4.1",
-        "myply-common": "https://github.com/rycont/myply-common",
+        "myply-common": "https://github.com/rycont/myply-common/",
         "next": "12.0.7",
         "react": "17.0.2",
         "react-content-loader": "^6.1.0",
